change then-{type} for then-{name} action
